GDB-13429 ttyg dark mode fixes (#2514) (#2515)
## What
Fix some issues with the colors in the TTYG under dark mode

## Why
Those are some leftover issues from the design system wiring with the
application.

## How
Replaced and applied proper color variables on different components and
removed some hardcodded once.

## Testing


## Screenshots


## Checklist
- [x] Branch name
- [x] Target branch
- [x] Commit messages
- [x] Squash commits
- [x] MR name
- [x] MR Description
- [ ] Tests

--- a/packages/legacy-workbench/src/css/ttyg/agent-list.css
+++ b/packages/legacy-workbench/src/css/ttyg/agent-list.css
@@ -28,17 +28,14 @@
     justify-content: space-between;
     align-items: center;
     font-weight: unset;
-    color: inherit;
-    border-color: var(--gw-neutral-base);
+    background-color: var(--gw-select-background);
+    border-color: var(--gw-select-border-color);
+    color: var(--gw-select-dropdown-color);
 }
 
 .agent-list-component .agents-filter-dropdown .dropdown-toggle .selected-filter {
     flex-grow: 1;
     text-align: left;
-}
-
-.agent-list-component .agents-filter-dropdown .dropdown-toggle:hover {
-    background-color: #fff;
 }
 
 .agent-list-component .agents-filter-dropdown .dropdown-toggle:after {
